refactor api register dentist account
